feat: add g1 point sign api (#9)
